--- a/ex005/index.html
+++ b/ex005/index.html
@@ -28,5 +28,7 @@
         <ins>sublinhado</ins><br>
         <del>texto riscado</del><br>
 <p>ex: folmula h<sup>cima </sup>
-    <sub>baico</sub></p>
+    <sub>baixo</sub></p>
+
+    <p>envelopar= ctrl+shift+p</p>
 </html>
