--- a/ex011/index.html
+++ b/ex011/index.html
@@ -4,20 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>css</title>
-    <style>
-        h1{
-            color: brown;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color: black; color:floralwhite ;">
+<body>
     <h1>Capitulo 1</h1>
     <h2>Capitulo 1.1</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim atque fugiat ducimus quae inventore vitae est ad ipsa quidem officiis. Blanditiis, debitis aspernatur vero dolore placeat assumenda quaerat quos sed?</p>
+    <p>no mesmo aquivo posso usar tanto css interno como externo</p>
     <h2>Capitulo 1.2</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ab nobis impedit inventore! Amet non praesentium omnis. Nemo dolor modi numquam eius sunt ab aut reprehenderit libero, maxime velit qui!</p>
     <h1> CApitulo 2</h1>
     <h2>Capitulo 2.1</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quibusdam, deleniti veritatis fugit beatae ratione et similique vitae doloribus aliquid veniam consectetur impedit, magnam saepe ut, accusamus esse ab officia.</p>
+    <p style="text-align: right;"><a href="pag2.html">Pagina 02</a></p>
 </body>
 </html>
