--- a/ex012/index.html
+++ b/ex012/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cores css</title>
 </head>
 <body>
-    
+    <!--exemplo usando nomes-->
+   <h2 style="background-color: blue; color: white;">Exemplo de cores</h2>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste hic illo harum, dolore consequuntur laudantium similique voluptas voluptatum possimus cupiditate quo! Ullam itaque perspiciatis nobis voluptate perferendis iure dicta modi.</p> 
+   <br>
+   <!--exemplo usando codigo hexadecimal-->
+   <!--decimal 0 1 2 3 4 5 6 7 8 9-->
+   <!--hexadecimal 0 1 2 3 4 5 6 7 8 9 A B C D E F-->
+   <h2 style="background-color: #0000ff;color: #ffffff;">Exemplo de cores</h2>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste hic illo harum, dolore consequuntur laudantium similique voluptas voluptatum possimus cupiditate quo! Ullam itaque perspiciatis nobis voluptate perferendis iure dicta modi.</p> 
 </body>
 </html>
