--- a/ex012/index.html
+++ b/ex012/index.html
@@ -15,5 +15,20 @@
    <!--hexadecimal 0 1 2 3 4 5 6 7 8 9 A B C D E F-->
    <h2 style="background-color: #0000ff;color: #ffffff;">Exemplo de cores</h2>
    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste hic illo harum, dolore consequuntur laudantium similique voluptas voluptatum possimus cupiditate quo! Ullam itaque perspiciatis nobis voluptate perferendis iure dicta modi.</p> 
+   <br>
+   <!--usando rgb-->
+   <h2 style="background-color: rgb(0, 0, 255); color: rgb(255, 255, 255);">Exemplo de cores</h2>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste hic illo harum, dolore consequuntur laudantium similique voluptas voluptatum possimus cupiditate quo! Ullam itaque perspiciatis nobis voluptate perferendis iure dicta modi.</p> 
+   <br>
+   <!--matiz-->
+   <h2 style="background-color: hsl(240, 100%, 50%); color: hsl(0, 0%, 100%);">Exemplo de cores</h2>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste hic illo harum, dolore consequuntur laudantium similique voluptas voluptatum possimus cupiditate quo! Ullam itaque perspiciatis nobis voluptate perferendis iure dicta modi.</p> 
+
+   <br>
+   <!--usando rgb modificado-->
+   <h2 style="background-color: rgba(167, 4, 4, 0.342); color: #0400ff;">Exemplo de cores</h2>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste hic illo harum, dolore consequuntur laudantium similique voluptas voluptatum possimus cupiditate quo! Ullam itaque perspiciatis nobis voluptate perferendis iure dicta modi.</p> 
+</body>
+</body>
 </body>
 </html>
