--- a/ex012/index.html
+++ b/ex012/index.html
@@ -27,7 +27,7 @@
    <br>
    <!--usando rgb modificado-->
    <h2 style="background-color: rgba(167, 4, 4, 0.342); color: #0400ff;">Exemplo de cores</h2>
-   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste hic illo harum, dolore consequuntur laudantium similique voluptas voluptatum possimus cupiditate quo! Ullam itaque perspiciatis nobis voluptate perferendis iure dicta modi.</p> 
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste hic illo harum, dolore consequuntur laudantium similique voluptas voluptatum possimus cupiditate quo! Ullam itaque perspiciatis nobis voluptate perferendis iure dicta mo.</p> 
 </body>
 </body>
 </body>
