--- a/ex013/index.html
+++ b/ex013/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>testando gradiente</title>
+    <style>
+        *{ /* configuração global do css*/
+            height:100% ;
+        }
+        body{
+            background-image: linear-gradient(to bottom, #4F63D3,#B7358F,#E9484D,#F77D2A,#FFD87D);
+            background-attachment: fixed;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>testando gradiente</h1>
+
 </body>
 </html>
