--- a/ex015/index.html
+++ b/ex015/index.html
@@ -9,8 +9,8 @@
         body {
             font-family:Arial, Helvetica, sans-serif
             }
-            h1,h2 {
-                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            h1 {
+                font-family:serif;
             }
     </style>
 </head>
